@@ -3,6 +3,7 @@
 this repository contains the full copyright notices and license terms. -->
 <tree>
     <field name="party"/>
+    <field name="party_name"/>
     <field name="name"/>
     <field name="zip"/>
     <field name="city"/>
